; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_shader-parser.c_get_shader_param_type.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_shader-parser.c_get_shader_param_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"float\00", align 1
@GS_SHADER_PARAM_FLOAT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"float2\00", align 1
@GS_SHADER_PARAM_VEC2 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"float3\00", align 1
@GS_SHADER_PARAM_VEC3 = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"float4\00", align 1
@GS_SHADER_PARAM_VEC4 = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"int2\00", align 1
@GS_SHADER_PARAM_INT2 = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"int3\00", align 1
@GS_SHADER_PARAM_INT3 = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [5 x i8] c"int4\00", align 1
@GS_SHADER_PARAM_INT4 = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [8 x i8] c"texture\00", align 1
@GS_SHADER_PARAM_TEXTURE = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [9 x i8] c"float4x4\00", align 1
@GS_SHADER_PARAM_MATRIX4X4 = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [5 x i8] c"bool\00", align 1
@GS_SHADER_PARAM_BOOL = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [4 x i8] c"int\00", align 1
@GS_SHADER_PARAM_INT = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [7 x i8] c"string\00", align 1
@GS_SHADER_PARAM_STRING = common dso_local global i32 0, align 4
@GS_SHADER_PARAM_UNKNOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_shader_param_type(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @strcmp(i8* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @GS_SHADER_PARAM_FLOAT, align 4
  store i32 %8, i32* %2, align 4
  br label %88

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strcmp(i8* %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @GS_SHADER_PARAM_VEC2, align 4
  store i32 %14, i32* %2, align 4
  br label %88

15:                                               ; preds = %9
  %16 = load i8*, i8** %3, align 8
  %17 = call i64 @strcmp(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i32, i32* @GS_SHADER_PARAM_VEC3, align 4
  store i32 %20, i32* %2, align 4
  br label %88

21:                                               ; preds = %15
  %22 = load i8*, i8** %3, align 8
  %23 = call i64 @strcmp(i8* %22, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @GS_SHADER_PARAM_VEC4, align 4
  store i32 %26, i32* %2, align 4
  br label %88

27:                                               ; preds = %21
  %28 = load i8*, i8** %3, align 8
  %29 = call i64 @strcmp(i8* %28, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @GS_SHADER_PARAM_INT2, align 4
  store i32 %32, i32* %2, align 4
  br label %88

33:                                               ; preds = %27
  %34 = load i8*, i8** %3, align 8
  %35 = call i64 @strcmp(i8* %34, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = load i32, i32* @GS_SHADER_PARAM_INT3, align 4
  store i32 %38, i32* %2, align 4
  br label %88

39:                                               ; preds = %33
  %40 = load i8*, i8** %3, align 8
  %41 = call i64 @strcmp(i8* %40, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %42 = icmp eq i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = load i32, i32* @GS_SHADER_PARAM_INT4, align 4
  store i32 %44, i32* %2, align 4
  br label %88

45:                                               ; preds = %39
  %46 = load i8*, i8** %3, align 8
  %47 = call i64 @astrcmp_n(i8* %46, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i32 7)
  %48 = icmp eq i64 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %45
  %50 = load i32, i32* @GS_SHADER_PARAM_TEXTURE, align 4
  store i32 %50, i32* %2, align 4
  br label %88

51:                                               ; preds = %45
  %52 = load i8*, i8** %3, align 8
  %53 = call i64 @strcmp(i8* %52, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0))
  %54 = icmp eq i64 %53, 0
  br i1 %54, label %55, label %57

55:                                               ; preds = %51
  %56 = load i32, i32* @GS_SHADER_PARAM_MATRIX4X4, align 4
  store i32 %56, i32* %2, align 4
  br label %88

57:                                               ; preds = %51
  %58 = load i8*, i8** %3, align 8
  %59 = call i64 @strcmp(i8* %58, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0))
  %60 = icmp eq i64 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %57
  %62 = load i32, i32* @GS_SHADER_PARAM_BOOL, align 4
  store i32 %62, i32* %2, align 4
  br label %88

63:                                               ; preds = %57
  %64 = load i8*, i8** %3, align 8
  %65 = call i64 @strcmp(i8* %64, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i64 0, i64 0))
  %66 = icmp eq i64 %65, 0
  br i1 %66, label %67, label %69

67:                                               ; preds = %63
  %68 = load i32, i32* @GS_SHADER_PARAM_INT, align 4
  store i32 %68, i32* %2, align 4
  br label %88

69:                                               ; preds = %63
  %70 = load i8*, i8** %3, align 8
  %71 = call i64 @strcmp(i8* %70, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i64 0, i64 0))
  %72 = icmp eq i64 %71, 0
  br i1 %72, label %73, label %75

73:                                               ; preds = %69
  %74 = load i32, i32* @GS_SHADER_PARAM_STRING, align 4
  store i32 %74, i32* %2, align 4
  br label %88

75:                                               ; preds = %69
  br label %76

76:                                               ; preds = %75
  br label %77

77:                                               ; preds = %76
  br label %78

78:                                               ; preds = %77
  br label %79

79:                                               ; preds = %78
  br label %80

80:                                               ; preds = %79
  br label %81

81:                                               ; preds = %80
  br label %82

82:                                               ; preds = %81
  br label %83

83:                                               ; preds = %82
  br label %84

84:                                               ; preds = %83
  br label %85

85:                                               ; preds = %84
  br label %86

86:                                               ; preds = %85
  %87 = load i32, i32* @GS_SHADER_PARAM_UNKNOWN, align 4
  store i32 %87, i32* %2, align 4
  br label %88

88:                                               ; preds = %86, %73, %67, %61, %55, %49, %43, %37, %31, %25, %19, %13, %7
  %89 = load i32, i32* %2, align 4
  ret i32 %89
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @astrcmp_n(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
